# Glyph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: glyphConfig.cmake.in
include/glyph/core/: buffer.h  cell.h  color.h  diff.h  event.h  geometry.h  style.h  text.h  types.h
include/glyph/input/: input.h  input_guard.h  win_input.h
include/glyph/input/detail/: vt_decoder.h
include/glyph/input/posix/: posix_input.h
include/glyph/input/win32/: win_input.h
include/glyph/render/: render.h  terminal.h
include/glyph/render/ansi/: ansi_renderer.h
include/glyph/render/debug/: debug_renderer.h
include/glyph/view/: canvas.h  frame.h  text.h  view.h
include/glyph/view/components/: bar.h  border.h  box_layout.h  fill.h  focus.h  inset.h  label.h  panel.h  stack.h  table.h  text_input.h
include/glyph/view/layout/: align.h  box.h  inset.h  scroll.h  split.h  stack.h  types.h
include/glyph/view/primitives/: fill.h
modules/: glyph.cppm  glyph.prelude.h
samples/: ansi_render.cpp  debug_render.cpp  demo.cpp
samples/basic/: ansi_render.cpp  bar_demo.cpp  components_demo.cpp  debug_render.cpp  layout_demo.cpp  layout_gallery.cpp  poll_stress_demo.cpp  snake_demo.cpp
samples/modules/: module_demo.cpp
samples/ui/: agent_chat.cpp  aurora_dashboard.cpp
src/: ansi_renderer.cpp  debug_renderer.cpp  glyph_dummy.cpp  win_input.cpp
src/input/: make_input.cpp  vt_decoder.cpp
src/posix/: posix_input.cpp
src/render/: terminal.cpp
src/render/ansi/: ansi_renderer.cpp
src/render/debug/: debug_renderer.cpp
src/win32/: win_input.cpp
tests/: CMakeLists.txt  doctest_main.cpp
tests/e2e/: test_input_stream.cpp
tests/integration/: test_render_pipeline.cpp
tests/snapshot/: test_ansi_output.cpp
tests/unit/: test_buffer.cpp  test_cell_width.cpp  test_diff.cpp  test_geometry.cpp  test_text_input.cpp  test_vt_decoder.cpp
